--- a/src/pages/_commands.scss
+++ b/src/pages/_commands.scss
@@ -1,33 +1,33 @@
 .commands {
-	margin-top: 2rem;
+  margin-top: 2rem;
 	margin-bottom: 6rem;
 	display: grid;
-	grid-template-columns: repeat(12, 1fr);
 	row-gap: 2rem;
+	grid-template-columns: repeat(12, 1fr);
 
 	&__categories {
 		display: flex;
 		flex-direction: column;
-		grid-column: 1 / 4;
 		min-width: 12.5rem;
+		grid-column: 1 / 4;
 	}
 
 	&__categories-list {
 		margin-top: 1rem;
-		background-color: $dark-blue-shadow;
-		border-radius: 1rem;
 		padding: .75rem;
+		border-radius: 1rem;
+		background-color: $dark-blue-shadow;
 	}
 
 	&__category-item {
 		border-radius: 0.5rem;
 
 		a {
-			font-weight: 500;
-			padding: .5rem;
 			display: inline-block;
 			min-height: 100%;
 			width: 100%;
+      padding: .5rem;
+			font-weight: 500;
 		}
 
 		&:hover { background-color: $dark-blue; }
@@ -93,8 +93,7 @@
 		flex-grow: 1;
 
 		&-svg { display: none; }
-		&-bar { width: 100%; }
-		&-bar:focus { width: 100%; }
+		&-bar, &-bar:focus { width: 100%; }
 	}
 }
 }
@@ -110,16 +109,19 @@
 	h1, h2{
 		width: fit-content;
 		margin-left: 1rem;
+		border-bottom: solid 2px $light-blue;
+
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		border-bottom: solid 2px $light-blue;
 	}
 
 	&__categories {
 		flex-direction: row;
 		flex-wrap: wrap;
+    width: 100%;
 		min-width: 0;
+
 		grid-column: 1 / 13;
 		grid-row: 1 / 2;
 	}
@@ -127,9 +129,11 @@
 	&__categories-list { width: 100%; }
 
 	&__commands-block {
+    width: 100%;
+		margin: 0;
+
 		grid-column: 1 / 13;
 		grid-row: 2 / 3;
-		margin: 0;
 	}
 }
 }
